--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -1,9 +1,9 @@
-﻿{
-  "version": "1.0.0-*",
+{
+  "version": "0.0.1-*",
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0"
+    "System.ComponentModel": "4.0.1"
   },
 
   "frameworks": {
