--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -2,12 +2,14 @@
   "version": "0.0.1-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
-    "System.ComponentModel": "4.0.1"
   },
 
   "frameworks": {
     "netstandard1.6": {
+      "dependencies": {
+        "NETStandard.Library": "1.6.0",
+        "System.ComponentModel": "4.0.1"
+      },
       "imports": "dnxcore50"
     }
   }
