--- a/src/AspectCore.Lite.DependencyInjection/project.json
+++ b/src/AspectCore.Lite.DependencyInjection/project.json
@@ -2,7 +2,8 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-   
+    "AspectCore.Lite": "0.0.1-*",
+    "Microsoft.Extensions.DependencyInjection": "1.0.0"
   },
 
   "frameworks": {
