--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -2,6 +2,7 @@
   "version": "0.0.1-*",
 
   "dependencies": {
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
     "NETStandard.Library": "1.6.0"
   },
 
