--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -3,13 +3,14 @@
 
   "dependencies": {
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-    "NETStandard.Library": "1.6.0"
+    "System.Threading.Thread": "4.0.0-beta-23516"
   },
 
   "frameworks": {
     "netstandard1.6": {
       "dependencies": {
-        "System.ComponentModel": "4.0.1"
+        "System.ComponentModel": "4.0.1",
+        "NETStandard.Library": "1.6.0"
       },
       "imports": "dnxcore50"
     }
