--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -2,8 +2,7 @@
   "version": "0.0.1-*",
 
   "dependencies": {
-    "Microsoft.Extensions.DependencyInjection": "1.0.0",
-    
+    "Microsoft.Extensions.DependencyInjection": "1.0.0"
   },
 
   "frameworks": {
