--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -8,19 +8,18 @@
   "frameworks": {
     "netstandard1.6": {
       "dependencies": {
-        "System.ComponentModel": "4.0.1",
         "NETStandard.Library": "1.6.0",
         "Nito.AsyncEx.Context": "1.1.0",
-        "System.Threading.Thread": "4.0.0-*",
+        "System.ComponentModel": "4.0.1",
         "System.Reflection.Emit": "4.0.1",
-        "System.Runtime.Loader": "4.0.0"
+        "System.Threading.Thread": "4.0.0-*"
       },
       "imports": "dnxcore50"
     },
     "net451": {
       "dependencies": {
-        "System.Runtime": "4.0.10",
-        "Nito.AsyncEx": "3.0.1"
+        "Nito.AsyncEx": "3.0.1",
+        "System.Runtime": "4.0.10"
       }
     }
   }
