--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1-*",
+  "version": "1.0.0-beta1-1013",
 
   "dependencies": {
     "Microsoft.Extensions.DependencyInjection": "1.0.0"
