--- a/src/AspectCore.Lite.Autofac/project.json
+++ b/src/AspectCore.Lite.Autofac/project.json
@@ -3,16 +3,20 @@
 
   "dependencies": {
     "AspectCore.Lite": "1.0.0-*",
-    "Autofac": "4.0.0-*"
+    "Autofac.Extensions.DependencyInjection": "4.0.0-*"
   },
 
   "frameworks": {
-    "net451": {},
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0"
+        
       },
       "imports": "dnxcore50"
+    },
+    "net451": {
+      "dependencies": {
+      }
     }
   }
 }
