--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -8,11 +8,13 @@
   "frameworks": {
     "netstandard1.6": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0",
+
         "Nito.AsyncEx.Context": "1.1.0",
-        "System.ComponentModel": "4.0.1",
         "System.Reflection.Emit": "4.0.1",
-        "System.Threading.Thread": "4.0.0-*"
+        "System.Runtime": "4.1.0",
+        "System.Runtime.InteropServices": "4.1.0",
+        "System.Reflection.Extensions": "4.0.1",
+        "System.Linq.Expressions": "4.1.0"
       },
       "imports": "dnxcore50"
     },
