add AspectCore.Lite.DependencyInjection project

--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -28,7 +28,7 @@
       "type": "git",
       "url": "https://github.com/AspectCore/Lite"
     },
-    "tags": [ "DynamicProxy", "Aop", "AspNetCore" ]
+    "tags": [ "DynamicProxy", "Aop", "DependencyInjection" ]
   },
   "projectUrl": "https://github.com/AspectCore/Lite",
   "title": "AspectCore Lite",
