--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,12 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# Visual Studio Code config directory
+.vscode/
+
+# Rider config directory
+.idea/
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
