--- a/src/AspectCore.Lite/project.json
+++ b/src/AspectCore.Lite/project.json
@@ -1,14 +1,15 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "Microsoft.Extensions.DependencyInjection": "1.0.0"
+    "Microsoft.Extensions.DependencyInjection": "1.1.0"
   },
   "description": "AspectCore Lite is an lightweight aop lib for Asp.Net Core framework.",
   "frameworks": {
-    "netstandard1.6": {
+    "netstandard1.6.1": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0",
-        "System.Reflection.Emit": "4.0.1",
+        "NETStandard.Library": "1.6.1",
+        "System.Reflection.Emit": "4.3.0",
+        "System.Linq.Expressions": "4.3.0",
         "Nito.AsyncEx.Context": "1.1.0"
       }
     },
