--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -1,9 +1,7 @@
 {
-  "version": "1.0.0-*",
-
+  "authors": [ "liuhaoyang" ],
   "dependencies": {
   },
-
   "frameworks": {
     "netstandard1.6.1": {
       "dependencies": {
@@ -13,10 +11,23 @@
     },
     "netcoreapp1.1": {
       "dependencies": {
-        "Microsoft.NETCore.App": "1.1.0" 
+        "Microsoft.NETCore.App": "1.1.0"
       }
     },
-    "net45": {
-    }
-  }
+    "net45": {}
+  },
+  "packOptions": {
+    "iconUrl": "https://avatars1.githubusercontent.com/u/19426425?v=3&s=200",
+    "licenseUrl": "https://mit-license.org/",
+    "owners": [ "liuhaoyang" ],
+    "releaseNotes": "The basic realization of the interceptor system.",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/AspectCore/Lite"
+    },
+    "tags": [ "DynamicProxy", "Aop", "Aspect" ]
+  },
+  "projectUrl": "https://github.com/AspectCore/Lite",
+  "title": "AspectCore.Lite.Abstractions",
+  "version": "1.0.0-beta5-12030"
 }
