update version to 1.0.0-beta5-12041

--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -1,5 +1,5 @@
 {
-  "authors": [ "liuhaoyang" ],
+  "authors": [ "Haoyang Liu" ],
   "dependencies": {
   },
   "description": "The abstract design of the dynamicproxy framework.",
