--- a/src/AspectCore.Lite.DynamicProxy/project.json
+++ b/src/AspectCore.Lite.DynamicProxy/project.json
@@ -1,8 +1,7 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "AspectCore.Lite.Abstractions": "1.0.0-beta5-12110",
-    "AspectCore.Lite.Abstractions.Generator": "1.0.0-beta5-12110"
+    "AspectCore.Lite.Abstractions.Resolution": "1.0.0-beta5-12120"
   },
   "description": "The default implementation of the dynamicproxy framework.",
   "frameworks": {
@@ -40,5 +39,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/Lite",
   "title": "AspectCore.Lite.DynamicProxy",
-  "version": "1.0.0-beta5-12110"
+  "version": "1.0.0-beta5-12120"
 }
