--- a/src/AspectCore.Lite.Abstractions.Resolution/project.json
+++ b/src/AspectCore.Lite.Abstractions.Resolution/project.json
@@ -1,8 +1,10 @@
 {
   "authors": [ "liuhaoyang" ],
+  "buildOptions": { "allowUnsafe": true },
+  "compilationOptions": { "allowUnsafe": true },
   "dependencies": {
-    "AspectCore.Lite.Abstractions": "1.0.0-beta5-12262",
-    "AspectCore.Lite.Abstractions.Generator": "1.0.0-beta5-12262"
+    "AspectCore.Lite.Abstractions": "1.0.0-beta5-12266",
+    "AspectCore.Lite.Abstractions.Generator": "1.0.0-beta5-12266"
   },
   "description": "The default implementation of the dynamicproxy framework.",
   "frameworks": {
@@ -33,5 +35,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/Lite",
   "title": "AspectCore.Lite.Abstractions.Resolution",
-  "version": "1.0.0-beta5-12262"
+  "version": "1.0.0-beta5-12266"
 }
