--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -1,13 +1,15 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
+    "System.Reflection.Emit.Lightweight": "4.3.0"
   },
   "description": "The abstract design of the dynamicproxy framework.",
   "frameworks": {
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.1",
-        "System.ComponentModel": "4.3.0"
+        "System.ComponentModel": "4.3.0",
+        "System.Reflection.Emit": "4.3.0"
       }
     },
     "net451": {}
