--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -1,7 +1,8 @@
 {
   "authors": [ "liuhaoyang" ],
+  "buildOptions": { "allowUnsafe": true },
+  "compilationOptions": { "allowUnsafe": true },
   "dependencies": {
-
   },
   "description": "The abstract design of the dynamicproxy framework.",
   "frameworks": {
