remove AspectCore.Lite.Abstractions.Generator project

--- a/src/AspectCore.Lite.Abstractions.Resolution/project.json
+++ b/src/AspectCore.Lite.Abstractions.Resolution/project.json
@@ -1,8 +1,7 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "AspectCore.Lite.Abstractions": "1.0.0-beta5-12266",
-    "AspectCore.Lite.Abstractions.Generator": "1.0.0-beta5-12266"
+    "AspectCore.Lite.Abstractions": "1.0.0-beta5-12266"
   },
   "description": "The default implementation of the dynamicproxy framework.",
   "frameworks": {
