--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -23,11 +23,11 @@
     "releaseNotes": "The abstract design of the dynamicproxy framework.",
     "repository": {
       "type": "git",
-      "url": "https://github.com/AspectCore/Lite"
+      "url": "https://github.com/AspectCore/Lite.Abstractions"
     },
     "tags": [ "DynamicProxy", "Aop", "Aspect" ]
   },
-  "projectUrl": "https://github.com/AspectCore/Lite",
+  "projectUrl": "https://github.com/AspectCore/Lite.Abstractions",
   "title": "AspectCore.Lite.Abstractions",
   "version": "1.1.0-rc1"
 }
