--- a/src/AspectCore.Lite.Abstractions.Resolution/project.json
+++ b/src/AspectCore.Lite.Abstractions.Resolution/project.json
@@ -1,7 +1,7 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "AspectCore.Lite.Abstractions": "1.1.0-rc1"
+    "AspectCore.Lite.Abstractions": "1.1.0-rc1-13170"
   },
   "description": "The default implementation of the dynamicproxy framework.",
   "frameworks": {
@@ -28,5 +28,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/Lite.Abstractions",
   "title": "AspectCore.Lite.Abstractions.Resolution",
-  "version": "1.1.0-rc1"
+  "version": "1.1.0-rc1-13170"
 }
