--- a/src/AspectCore.Lite.Abstractions/project.json
+++ b/src/AspectCore.Lite.Abstractions/project.json
@@ -29,5 +29,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/Lite.Abstractions",
   "title": "AspectCore.Lite.Abstractions",
-  "version": "1.1.0-rc1"
+  "version": "1.1.0-rc1-13170"
 }
