--- a/NuGet.config
+++ b/NuGet.config
@@ -3,6 +3,6 @@
   <packageSources>
     <add key="AspNetVNext" value="https://www.myget.org/F/aspnetcidev/api/v3/index.json" />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
-    <add key="AspectCoreVNext" value="http://servicepackages.chinacloudsites.cn/nuget/" />
+    <add key="AspectCoreVNext" value="https://www.myget.org/F/aspectcore/api/v3/index.json" />
   </packageSources>
 </configuration>
