--- a/src/AspectCore.Abstractions/project.json
+++ b/src/AspectCore.Abstractions/project.json
@@ -10,6 +10,7 @@
       "dependencies": {
         "NETStandard.Library": "1.6.0",
         "System.ComponentModel": "4.3.0",
+        "System.Dynamic.Runtime": "4.3.0",
         "System.Reflection.Emit": "4.3.0",
         "System.Reflection.Emit.Lightweight": "4.3.0"
       }
