--- a/src/AspectCore.Abstractions/project.json
+++ b/src/AspectCore.Abstractions/project.json
@@ -9,9 +9,7 @@
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
-        "System.ComponentModel": "4.3.0",
-        "System.Reflection.Emit": "4.3.0",
-        "System.Reflection.Emit.Lightweight": "4.3.0"
+        "System.ComponentModel": "4.3.0"
       }
     },
     "net45": {
