--- a/src/AspectCore.Core/project.json
+++ b/src/AspectCore.Core/project.json
@@ -1,18 +1,25 @@
 {
   "authors": [ "liuhaoyang" ],
+  "buildOptions": { "allowUnsafe": true },
+  "compilationOptions": { "allowUnsafe": true },
   "dependencies": {
     "AspectCore.Abstractions": "1.1.0-rc1-*"
   },
-  "description": "The core implementation of the AspectCore framework.",
+  "description": "The implementation of the AspectCore framework.",
   "frameworks": {
-    "netstandard1.6": {},
+    "netstandard1.6": {
+      "dependencies": {
+        "System.Reflection.Emit": "4.3.0",
+        "System.Reflection.Emit.Lightweight": "4.3.0"
+      }
+    },
     "net45": {}
   },
   "packOptions": {
     "iconUrl": "https://avatars1.githubusercontent.com/u/19426425?v=3&s=200",
     "licenseUrl": "https://mit-license.org/",
     "owners": [ "liuhaoyang" ],
-    "releaseNotes": "The core implementation of the AspectCore framework.",
+    "releaseNotes": "The implementation of the AspectCore framework.",
     "repository": {
       "type": "git",
       "url": "https://github.com/AspectCore/Abstractions"
