--- a/src/Reflection/src/AspectCore.Extensions.Reflection/AspectCore.Extensions.Reflection.csproj
+++ b/src/Reflection/src/AspectCore.Extensions.Reflection/AspectCore.Extensions.Reflection.csproj
@@ -31,4 +31,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="MethodReflector.Static.cs" />
+  </ItemGroup>
+
 </Project>
