use snk to sign assembly.

--- a/src/DependencyInjection/src/AspectCore.Extensions.DependencyInjection/AspectCore.Extensions.DependencyInjection.csproj
+++ b/src/DependencyInjection/src/AspectCore.Extensions.DependencyInjection/AspectCore.Extensions.DependencyInjection.csproj
@@ -18,7 +18,7 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <SignAssembly>False</SignAssembly>
+    <SignAssembly>True</SignAssembly>
     <DelaySign>False</DelaySign>
     <AssemblyOriginatorKeyFile>aspectcore.snk</AssemblyOriginatorKeyFile>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
