Remove ILGeneratorExtensions & Add Dependency for AspectCore.Extensions.Reflection

--- a/src/Abstractions/src/AspectCore.Core/AspectCore.Core.csproj
+++ b/src/Abstractions/src/AspectCore.Core/AspectCore.Core.csproj
@@ -34,6 +34,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspectCore.Extensions.Reflection" Version="0.2.0-preview1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AspectCore.Abstractions\AspectCore.Abstractions.csproj" />
   </ItemGroup>
 
