--- a/src/Abstractions/src/AspectCore.Abstractions/AspectCore.Abstractions.csproj
+++ b/src/Abstractions/src/AspectCore.Abstractions/AspectCore.Abstractions.csproj
@@ -1,28 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\..\..\build\common.props" />
+  <Import Project="..\..\..\..\build\net45.props" />
   
   <PropertyGroup>
     <Description>The abstract design of the AspectCore framework.</Description>
     <AssemblyTitle>AspectCore.Abstractions</AssemblyTitle>
-    <VersionPrefix>0.2.0</VersionPrefix>
     <TargetFrameworks>netstandard1.6;net45</TargetFrameworks>
     <AssemblyName>AspectCore.Abstractions</AssemblyName>
     <PackageId>AspectCore.Abstractions</PackageId>
     <PackageTags>DynamicProxy;Aop;Aspect;AspectCore;Intercepter</PackageTags>
     <PackageReleaseNotes>The abstract design of the AspectCore framework.</PackageReleaseNotes>
-    <Version>0.2.0-preview1</Version>
-    <AssemblyVersion>0.2.0.0</AssemblyVersion>
-    <FileVersion>0.2.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
+  
 </Project>
